# thesourcecode

./: README.md
Arduino_projects/Serial_servo/: Serial_servo.ino
Arduino_projects/ds1307With_LCD/: ds1307With_LCD.ino
BlynkCloudMaster/: platformio.ini
BlynkCloudMaster/include/: common.h  config.h  sysCfg.h
BlynkCloudMaster/src/: ABTraceCBK.h  AirConnectionInterface.h  DevReg.cpp  NtpTimeUpdate.cpp  OTA.cpp  OTA.hpp  RFComms.cpp  RFComms.h  TraceServer.cpp  TraceServer.h  airCommandHandler.cpp  airCommandHandler.h  common.h  comms.cpp  comms.h  config.h  dataBase.cpp  dataBase.h  main.cpp  remoreNode1.h  scan.py  sdWebServer.cpp  sdWebServer.h  sysCfg.h  timer.cpp  timer.h  webServerHandler.cpp  webServerHandler.h
CN1_ESP8266/: platformio.ini
CN1_ESP8266/src/: main.cpp
EncoderMotorDriver_STM/: .mxproject  .project  CMakeLists.txt  EncoderMotorDriver_STM.ioc  Makefile  STM32-for-VSCode.config.yaml  STM32Make.make  setup.bat
EncoderMotorDriver_STM/EncoderMoterHostApplication/: 2fitBoxTest.csf  EncoderTest.py  EncoderTest.ui  EncoderTest_worker.py  Ui-to-py.bat  udpSocket.py
EncoderMotorDriver_STM/Inc/: main.h
EncoderMotorDriver_STM/Src/: main.c
IO_Driver/: HW_IO_PORT.h  io_driver_api_kl25z.h  io_driver_kl25z.c
KL25Z_Projects/propeller_clock/: .cproject  .project  .propeller_clock.g_c  .propeller_clock.g_x  ProjectInfo.xml  (+3 more)
LinkList/: CMakeLists.txt  dynList.c  dynList.h  main.c  setup.bat
MasterWebPage/: index.htm  index1.htm  nodelist.htm  nodelist.js  script.js  script_1.js
NRF_NodeSalve/: platformio.ini
NodeSlave_NRF_WIFI_1/: platformio.ini
(+126 files in other folders)
